<!--
  ~ Copyright (C) 2014 Arnav Gupta, AOKP
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
    <string name="app_name">OneSettings</string>
    <string name="title_activity_one_settings">One Settings</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Strings related to Haptic -->
    <string name="title_haptic">Haptic</string>
    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>

    <!-- Touchscreen -->
    <string name="title_touchscreen">Touchscreen</string>
    <!-- Doubletap On -->
    <string name="touchscreen_double_tap_gesture_title">Wake device</string>
    <string name="touchscreen_double_tap_gesture_summary">Double tap to wake the device</string>
    <string name="touchscreen_camera_gesture_title">Camera</string>
    <string name="touchscreen_camera_gesture_summary">Draw a circle to activate camera</string>
    <string name="touchscreen_music_gesture_title">Music</string>
    <string name="touchscreen_flashlight_gesture_title">Flashlight</string>
    <string name="touchscreen_flashlight_gesture_summary">Draw a \'V\' to toggle flashlight</string>
    <string name="touchscreen_music_gesture_summary">Use gestures to control music playback \n
    • Two fingers vertically to play/pause\n
    • Draw left arrow for previous track\n
    • Draw right arrow for next track</string>

    <!-- Other -->
    <string name="title_other">Other</string>
    <string name="fast_charge_title">Fast charge</string>
    <string name="fast_charge_summary">Allow device faster charging while on USB</string>

</resources>
